# Nautilus-3.26

./: config.h.meson  meson.build  meson_options.txt
.pc/: applied-patches
data/: dbus-interfaces.xml  freedesktop-dbus-interfaces.xml  org.gnome.Nautilus.appdata.xml.in  org.gnome.Nautilus.desktop.in
debian/: changelog  control  control.in  docs  gbp.conf  gir1.2-nautilus-3.0.install  libnautilus-extension-dev.install  libnautilus-extension1a.install  nautilus-data.install  nautilus-home.desktop.in  nautilus.install  rules
eel/: meson.build
nautilus-desktop/: meson.build  nautilus-desktop-background.c  nautilus-desktop-background.h  nautilus-desktop-canvas-view.c  nautilus-desktop-window.c
po/: POTFILES.in
src/: meson.build  nautilus-application.c  nautilus-application.h  nautilus-canvas-container.c  nautilus-canvas-item.c  nautilus-dbus-manager.c  nautilus-directory-async.c  nautilus-directory.c  nautilus-file-conflict-dialog.c  nautilus-file-operations.c  nautilus-file-operations.h  nautilus-file-private.h  nautilus-file-utilities.c  nautilus-file-utilities.h  nautilus-file.c  nautilus-file.h  nautilus-files-view.c  nautilus-freedesktop-dbus.c  nautilus-freedesktop-dbus.h  nautilus-list-view.c  nautilus-main.c  nautilus-mime-actions.c  nautilus-module.c  nautilus-properties-window.c  nautilus-query-editor.c  nautilus-query.c  nautilus-query.h  nautilus-recent.c  nautilus-recent.h  nautilus-search-directory.c  nautilus-search-engine-locate.c  nautilus-search-engine-locate.h  nautilus-search-engine-recent.c  nautilus-search-engine-simple.c  (+17 more)
test/: meson.build  (+2 more)
(+52 files in other folders)
