option ('enable-profiling',
        type: 'boolean',
        value: false)
option ('enable-nst-extension',
        type: 'boolean',
        value: true)
option ('enable-selinux',
        type: 'boolean',
        value: true)
option ('enable-unity',
        type: 'boolean',
        value: false,
        description: 'build with unity launcher support')
option ('enable-desktop',
        type: 'boolean',
        value: true)
option ('enable-packagekit',
        type: 'boolean',
        value: true)
option ('enable-gtk-doc',
        type: 'boolean',
        value: false)
